test/expected/declare_vo_exclam_k_b.out
declare ! as virtual operator (S) returning bool
                               ^
32: error: member operator "!" must have exactly 0 parameters
